--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "PING-MD",
+  "name": "Tennor-MD",
   "version": "2.0.0",
   "description": "",
   "main": "ibrahim.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "s": "node ibrahim.js",
-    "bmwmd": "pm2 start ibrahim.js --attach --max-memory-restart 490M",
+    "tennormd": "pm2 start ibrahim.js --attach --max-memory-restart 490M",
     "c": "tsc"
   },
   "keywords": [
     "bot",
     "Baileys",
-    "PING-Md",
+    "Tennor-Md",
     "whatsapp",
     "whatsapp-bot",
-    "Mbuvi"
+    "Giddy"
   ],
-  "author": "Mbuvi",
+  "author": "Tennor",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
